# tropical-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  ARTIFACT_INDEX.md  GUIDE.md  MAINTAINER_MAP.md  METHODOLOGY.md  RELEASE.md  SOURCE_OF_TRUTH.md  configuration.md
examples/codex/: Documentation.md  Implement.md  Plan.md  Prompt.md  SHA256SUMS.txt  compact_prompt.md  config.toml
fixtures/: dreams_memory_safety_certificate.json  policy_invariance.json
scripts/: full_validation.sh  replay_cyberops_mcp.py  run_full_validation.py  update_release_checksums.sh  validate_installed_wheel.sh
src/tropical_mcp/: __init__.py  __main__.py  algebra.py  benchmark_harness.py  certificate_cli.py  compactor.py  compat.py  golden.py  resources.py  runtime.py  server.py  tagger.py  telemetry_cli.py  validation.py
src/tropical_mcp/fixtures/: SHA256SUMS.txt  dreams_memory_safety_transcript.json
tests/: conftest.py  test_algebra.py  test_algebra_properties.py  test_benchmark_harness.py  test_certificate.py  test_compactor.py  test_compat.py  test_docs_examples.py  test_policy_invariance.py  test_release_integrity.py  test_runtime.py  test_server_tools.py  test_tagger.py  test_telemetry_cli.py  test_validation.py
