[project]
name = "tropical-mcp"
version = "0.2.0"
description = "Source-available MCP server for guarded context compaction in Codex and Claude-style clients"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jack Chaudier Gaffney", email = "jackgaff@umich.edu" }]
dependencies = [
  "mcp[cli]>=1.2.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8.0",
  "mypy>=1.12.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://dreams-dun.vercel.app"
Repository = "https://github.com/jack-chaudier/tropical-mcp"
Issues = "https://github.com/jack-chaudier/tropical-mcp/issues"

[project.scripts]
tropical-mcp = "tropical_mcp.server:main"
tropical-mcp-replay = "tropical_mcp.benchmark_harness:main"
tropical-mcp-full-validate = "tropical_mcp.validation:main"
tropical-mcp-certificate = "tropical_mcp.certificate_cli:main"
tropical-compactor = "tropical_mcp.compat:tropical_compactor"
tropical-compactor-replay = "tropical_mcp.compat:tropical_compactor_replay"
tropical-compactor-full-validate = "tropical_mcp.compat:tropical_compactor_full_validate"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tropical_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/tropical_mcp",
  "/scripts",
  "/tests",
  "/fixtures",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
]
exclude = [
  "/.venv",
  "/.venv*",
  "/build",
  "/dist",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src/tropical_mcp"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
